vixens-gitops/apps/traefik/resources/traefik-dashboard-https.yaml
# vixens-gitops/apps/traefik/resources/traefik-dashboard-https.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.truxonline.com`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    certResolver: le
